Swagger fix, employees rules test
